# MSFS_BluetoothLE_Bridge

./: .gitmodules  CMakeLists.txt  CMakePresets.json  default.bleconfig  default.config  default.settings  readme.MD
apps/: ble_scanner_main.cpp  msfs_ble_bridge_main.cpp
src/: ble_scanner.cpp  ble_session.cpp  msfs_ble_bridge.cpp  simionic.cpp
